Added linking to openmp in Makefile

--- a/parallel/Makefile
+++ b/parallel/Makefile
@@ -26,7 +26,7 @@ REBX_DIR=../../reboundx
 all: librebound.so libreboundx.so
 	@echo ""
 	@echo "Compiling problem file ..."
-	$(CC) -I$(REBX_DIR)/src/ -I$(REB_DIR)/src/ -Wl,-rpath,./ $(OPT) $(PREDEF) problem.c -L. -lreboundx -lrebound $(LIB) -o rebound
+	$(CC) -I$(REBX_DIR)/src/ -I$(REB_DIR)/src/ -Wl,-rpath,./ $(OPT) -fopenmp $(PREDEF) problem.c -L. -lreboundx -lrebound $(LIB) -fopenmp -o rebound
 	@echo ""
 	@echo "Problem file compiled successfully."
 
